--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -24,7 +24,7 @@ protobuf==3.9.2
 pyparsing==2.4.2          # via matplotlib, packaging
 python-dateutil==2.8.0
 pytz==2019.2              # via pandas
-pyyaml==3.13
+pyyaml==5.4.1             # This version marks the start of aarch64 support
 scikit-learn==0.21.3      # via hdbscan
 scipy==1.2.1
 seriate==1.1.2
